--- a/css/starter.css
+++ b/css/starter.css
@@ -1,6 +1,6 @@
 body {
     padding-top: 50px;
-    background-color: rgba(30, 192, 255, 0.16);
+    background-color: rgba(42, 255, 130, 0.07);
     background-image: radial-gradient(#fff 10%, transparent 10%),
     radial-gradient(#fff 10%, transparent 10%);
     background-size: 30px 30px;
@@ -62,13 +62,6 @@ body {
 }
 
 
-a {
-    color: #668839;
-}
-
-h2 {
-    color: #2b2e32;
-}
 img, .round, .round-blue, .round-navy {
     -webkit-transition: all 0.5s;
 }
@@ -105,4 +98,8 @@ img:hover {
     border: 1px solid #dfd7ca;
     font-size: 110%;
     padding: 10px;
+}
+
+table {
+    background-color: white;
 }
